renamed src to usal_echo + added notebook for metadata processing

--- a/notebooks/20190701_WT_dicom_metadata_processing.ipynb
+++ b/notebooks/20190701_WT_dicom_metadata_processing.ipynb
@@ -1,14 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from sqlalchemy import create_engine"
+    "# Processing Raw Dicom Metadata\n",
+    "This notebook performs the steps that are required to add the relevant dicom tags from the raw metadata csv to a postgres database."
    ]
   },
   {
@@ -17,11 +14,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_str =  \"postgresql://{}:{}@{}/{}\".format(credentials['user'],\n",
-    "                                                        credentials['password'],\n",
-    "                                                        credentials['host'],\n",
-    "                                                        credentials['database'])\n",
-    "conn = create_engine(connection_str)"
+    "import os\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "from json import load"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specify paths and import project modules"
    ]
   },
   {
@@ -31,15 +35,90 @@
    "outputs": [],
    "source": [
     "projectdir = os.path.dirname(os.getcwd())\n",
+    "sys.path.append(projectdir) # to use project modules in notebook\n",
     "datadir = os.path.join(projectdir, 'data')\n",
-    "metadata_path = os.path.join(datadir, '02_intermediate','dicom_metadata.csv')"
+    "metadata_path = os.path.join(datadir, '02_intermediate','dicom_metadata.csv')\n",
+    "\n",
+    "from usal_echo.d01_data import dicom_metadata"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get dicom tags that are of interest"
+    "### Generate sample metadata tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_files_keys = dicom_metadata.get_matching_s3_keys('cibercv','99966','.dcm')\n",
+    "test_files = []\n",
+    "for key in test_files_keys:\n",
+    "    test_files.append(key)\n",
+    "\n",
+    "if os.path.exists(os.path.join(datadir,'02_intermediate','dicom_metadata_sample.csv')) is True:\n",
+    "    sample = pd.read_csv(os.path.join(datadir, '02_intermediate','dicom_metadata_sample.csv'))\n",
+    "else:\n",
+    "    for file in test_files:\n",
+    "        df_sample = dicom_metadata.get_dicom_metadata('cibercv', file)\n",
+    "        dicom_metadata.write_dicom_metadata(df_sample, 'sample')\n",
+    "    sample = pd.read_csv(os.path.join(datadir, '02_intermediate','dicom_metadata_sample.csv'))\n",
+    "    \n",
+    "if os.path.exists(os.path.join(datadir,'02_intermediate','dicom_metadata_tag_descriptions.csv')) is True:\n",
+    "    tag_descriptions = pd.read_csv(os.path.join(datadir, '02_intermediate','dicom_metadata_tag_descriptions.csv'))\n",
+    "else:\n",
+    "    for file in test_files:\n",
+    "        df_desc = dicom_metadata.get_dicom_metadata('cibercv', file, description=True)\n",
+    "        dicom_metadata.write_dicom_metadata(df_desc, 'tag_descriptions')\n",
+    "    tag_descriptions = pd.read_csv(os.path.join(datadir, '02_intermediate','dicom_metadata_tag_descriptions.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_descriptions.rename(columns={'value':'description'}, inplace=True)\n",
+    "all_tags = sample.merge(tag_descriptions, how='left')\n",
+    "all_tags.drop_duplicates(subset=['tag1','tag2'], inplace=True)\n",
+    "all_tags.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Search sample metadata tag descriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tags[all_tags['description'].str.contains('UID')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tags[all_tags['description'].str.contains('Time|Date')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get dicom tags that are of interest"
    ]
   },
   {
@@ -49,39 +128,24 @@
    "outputs": [],
    "source": [
     "dicom_tags = dict(\n",
-    "    sop_instance_uid=('0008','0018'),\n",
-    "    rows=('0028','0010'), #in metadata\n",
-    "    columns=('0028','0011'), #in metadata\n",
-    "    number_of_frames=('0028','0008'), #in metadata\n",
-    "    cine_rate=('0018','0040'), #in metadata\n",
-    "    sequence_of_ultrasound_regions=('0018','6011'), #in metadata\n",
-    "    region_location_min_x0=('0018','6018'), #in metadata\n",
-    "    region_location_min_y0=('0018','601A'),\n",
-    "    region_location_max_x1=('0018','601C'), \n",
-    "    region_location_max_y1=('0018','601E'),\n",
-    "    physical_delta_x=('0018','602C'),\n",
-    "    physical_delta_y=('0018','602E'),\n",
-    "    physical_units_x_direction=('0018','6024'), #in metadata\n",
-    "    physical_units_y_direction=('0018','6026'), #in metadata\n",
-    "    region_spatial_format=('0018','6012'), #in metadata\n",
-    "    heart_rate=('0018', '1088'), #in metadata\n",
-    "    pixel_data=('7FE0','0010'),\n",
-    "    transfer_syntax_uid=('0002','0010'), #in metadata\n",
-    "    photometric_interpretation=('0028','0004'), #in metadata\n",
-    "    ultrasound_color_data_present=('0028','0014'), #in metadata\n",
-    "    acquisition_datetime=('0008', '002a'), #in metadata\n",
-    "    institution_name=('0008', '0080'),\n",
-    "    manufacturers_model_name=('0008', '1090') #in metadata\n",
+    "    sop_class_uid=('0008','0016'),\n",
+    "    rows=('0028','0010'),\n",
+    "    columns=('0028','0011'), \n",
+    "    number_of_frames=('0028','0008'), \n",
+    "    cine_rate=('0018','0040'),\n",
+    "    sequence_of_ultrasound_regions=('0018','6011'), \n",
+    "    region_location_min_x0=('0018','6018'), \n",
+    "    physical_units_x_direction=('0018','6024'),\n",
+    "    physical_units_y_direction=('0018','6026'),\n",
+    "    region_spatial_format=('0018','6012'), \n",
+    "    heart_rate=('0018', '1088'), \n",
+    "    transfer_syntax_uid=('0002','0010'),\n",
+    "    photometric_interpretation=('0028','0004'),\n",
+    "#    ultrasound_color_data_present=('0028','0014'), seems to be an incorrect tag\n",
+    "    acquisition_datetime=('0008', '002a'),\n",
+    "    manufacturers_model_name=('0008', '1090'), \n",
+    "    instance_creation_date=('0008','0012'),\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicom_tags.values()"
    ]
   },
   {
@@ -110,7 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp = datalist[0].unstack()#pivot(index=['dirname','filename'], columns=['tag1','tag2'], values='value')"
+    "meta = pd.concat(datalist)\n",
+    "for col in meta.columns[:-2]:\n",
+    "    meta[col] = meta[col].astype('category')"
    ]
   },
   {
@@ -119,7 +185,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datalist[0].tags.unique()"
+    "meta.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get frequency of unique tag values"
    ]
   },
   {
@@ -128,20 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunk[chunk.tag1==('0010')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "stackdf = datalist[0].set_index(['dirname','filename'])#,'tag1','tag2'])\n",
-    "stackdf['tag_tuple'] = list(zip(stackdf['tag1'],stackdf['tag2']))\n",
-    "stackdf[stackdf.tag_tuple==('0008','0018')]"
+    "# photometric_interpretation values\n",
+    "meta.loc[meta['tags']==('0028','0004'),'value'].value_counts()"
    ]
   },
   {
@@ -150,8 +211,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datachunks = pd.read_csv(metadata_path, chunksize=100000, dtype={'dirname':'category', 'filename':'category',\n",
-    "                                                                 'tag1':'category','tag2':'category'})"
+    "# transfer_syntax_uid\n",
+    "meta.loc[meta['tags']==('0002','0010'),'value'].value_counts()"
    ]
   },
   {
@@ -160,10 +221,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunklist = []\n",
-    "for chunk in datachunks:\n",
-    "    chunk.set_index(['dirname','filename'], inplace=True)\n",
-    "    chunklist.append(chunk)"
+    "# number_of_frames\n",
+    "number_of_frames = meta.loc[meta['tags']==('0028','0008'),'value'].astype('int')\n",
+    "number_of_frames.value_counts(bins=20)"
    ]
   },
   {
@@ -172,7 +232,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunklist[2].memory_usage()"
+    "#ultrasound_color_data_present\n",
+    "meta.loc[meta['tags']==('0028','0014'),'value'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add metadata table to database"
    ]
   },
   {
@@ -181,7 +249,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunklist[2].head()"
+    "def _load_db_credentials(filepath):\n",
+    "    with open(filepath) as f:\n",
+    "        credentials = load(f)\n",
+    "\n",
+    "    return credentials"
    ]
   },
   {
@@ -190,7 +262,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat(chunklist)"
+    "def save_to_db(df, credentials_file):\n",
+    "    credentials = _load_db_credentials(credentials_file)\n",
+    "    connection_str =  \"postgresql://{}:{}@{}/{}\".format(credentials['user'],\n",
+    "                                                         credentials['password'],\n",
+    "                                                         credentials['host'],\n",
+    "                                                         credentials['database'])\n",
+    "    conn = create_engine(connection_str)\n",
+    "    df.to_sql('metadata', conn, if_exists='append', index=False)"
    ]
   },
   {
@@ -199,26 +278,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dindexed = df.set_index(['dirname','filename'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in df.columns[:-1]:\n",
-    "    df[col] = df[col].astype('category')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chunklist[0].dtypes"
+    "credentials_file = os.path.join(os.path.expanduser('~'),'.psql_credentials.json')\n",
+    "if os.path.exists(credentials_file) is True:\n",
+    "    save_to_db(meta, credentials_file)"
    ]
   },
   {
