add util to strip whitespace from string columns

--- a/notebooks/20190702_YN_measurement_eda.ipynb
+++ b/notebooks/20190702_YN_measurement_eda.ipynb
@@ -37,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from d01_data.db import get_db_config_path, get_db_config, get_sqlalchemy_connection, read_table"
+    "from d01_data.db import get_db_config_path, get_db_config, get_sqlalchemy_connection, read_table\n",
+    "from d02_intermediate.string import strip_string_columns"
    ]
   },
   {
@@ -82,110 +83,11 @@
      "text": [
       "Table measurement_abstract_rpt has 1568350 rows and 6 columns\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>row_id</th>\n",
-       "      <th>studyid</th>\n",
-       "      <th>measabstractnumber</th>\n",
-       "      <th>name</th>\n",
-       "      <th>value</th>\n",
-       "      <th>unitname</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2882.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>(P1/2t)AVM</td>\n",
-       "      <td>2.491754</td>\n",
-       "      <td>cm2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2882.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>Area TSVI</td>\n",
-       "      <td>3.606348</td>\n",
-       "      <td>cm2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2882.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>FE(el-ps4)</td>\n",
-       "      <td>37.032087</td>\n",
-       "      <td>%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2882.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>FE(MDD-ps4)</td>\n",
-       "      <td>35.095355</td>\n",
-       "      <td>%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2882.0</td>\n",
-       "      <td>125.0</td>\n",
-       "      <td>P1/2t VM</td>\n",
-       "      <td>88.291224</td>\n",
-       "      <td>ms</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   row_id  studyid  measabstractnumber                                 name  \\\n",
-       "0     1.0   2882.0                 2.0  (P1/2t)AVM                            \n",
-       "1     2.0   2882.0                12.0  Area TSVI                             \n",
-       "2     3.0   2882.0                43.0  FE(el-ps4)                            \n",
-       "3     4.0   2882.0                46.0  FE(MDD-ps4)                           \n",
-       "4     5.0   2882.0               125.0  P1/2t VM                              \n",
-       "\n",
-       "       value          unitname  \n",
-       "0   2.491754  cm2               \n",
-       "1   3.606348  cm2               \n",
-       "2  37.032087  %                 \n",
-       "3  35.095355  %                 \n",
-       "4  88.291224  ms                "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "measurement_abstract_rpt_df = read_table(conn, 'measurement_abstract_rpt')\n",
-    "measurement_abstract_rpt_df.head()"
+    "# measurement_abstract_rpt_df.head()"
    ]
   },
   {
@@ -194,9 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove whitespace around measurement names to match with given measurements that correspond to views (fix units too)\n",
-    "measurement_abstract_rpt_df['name'] = measurement_abstract_rpt_df['name'].str.strip()\n",
-    "measurement_abstract_rpt_df['unitname'] = measurement_abstract_rpt_df['unitname'].str.strip()"
+    "measurement_abstract_rpt_df = strip_string_columns(measurement_abstract_rpt_df, ['name', 'unitname'])"
    ]
   },
   {
@@ -949,8 +849,8 @@
        "ASC (Haycock)              21438\n",
        "Vmáx V2 Ao                 20828\n",
        "GP máx Ao                  20827\n",
-       "DVItd                      20623\n",
        "VTD(Teich)                 20623\n",
+       "DVItd                      20623\n",
        "VTD(cúbico)                20613\n",
        "SIVtd                      20548\n",
        "PPVItd                     20430\n",
@@ -969,40 +869,40 @@
        "DVIts ap4                  17210\n",
        "VTD(el-ps4)                16665\n",
        "AVItd ap4                  16664\n",
-       "AVIts ap4                  16354\n",
        "VTS(el-ps4)                16354\n",
+       "AVIts ap4                  16354\n",
        "FE(el-ps4)                 16338\n",
        "                           ...  \n",
-       "Tmsv 6-SD (ms)                 1\n",
-       "Vmáx E VT                      1\n",
-       "AVP(I,A)                       1\n",
-       "RA ESA_phl                     1\n",
-       "Tmsv 12-SD (%)                 1\n",
-       "Tmpo. R-R                      1\n",
-       "IC(VM 1 diám)                  1\n",
-       "FAC VD                         1\n",
-       "Area VD ts                     1\n",
-       "IVC Diam_phl                   1\n",
-       "Tmsv 6-SD (%)                  1\n",
-       "Tmsv 12-DIF (%)                1\n",
-       "Excursión VI: media            1\n",
-       "Tmsv 12-DIF (ms)               1\n",
-       "Diámetro de CIA                1\n",
-       "Tmsv 16-DIF (ms)               1\n",
-       "GP med AP (completo)           1\n",
-       "Tmsv 12-SD (ms)                1\n",
-       "Excursión VI: mín              1\n",
-       "Tmsv 16-SD (ms)                1\n",
-       "Diám. TSVD proximal            1\n",
        "GC(VM 1 diám)                  1\n",
-       "Excursión VI: DesvEst          1\n",
-       "AVP(I,D)                       1\n",
-       "Tmsv 16-DIF (%)                1\n",
-       "LA Length_phl                  1\n",
-       "Tmsv 6-DIF (ms)                1\n",
-       "Tmsv 6-DIF (%)                 1\n",
+       "IVC Diam_phl                   1\n",
+       "Tmsv 6-SD (ms)                 1\n",
+       "Tmsv 16-SD (ms)                1\n",
        "RVIDd/LVIDd_phl                1\n",
+       "RA ESA_phl                     1\n",
+       "IC(VM 1 diám)                  1\n",
+       "Tmsv 6-SD (%)                  1\n",
+       "Excursión VI: mín              1\n",
+       "GP med AP (completo)           1\n",
+       "Excursión VI: máx.             1\n",
        "Vmáx A VT                      1\n",
+       "FAC VD                         1\n",
+       "Tmsv 16-SD (%)                 1\n",
+       "Tmsv 12-DIF (%)                1\n",
+       "Area VD td                     1\n",
+       "Tmsv 12-SD (ms)                1\n",
+       "Diám. TSVD proximal            1\n",
+       "Diámetro de CIA                1\n",
+       "E/A VT                         1\n",
+       "AVP(I,A)                       1\n",
+       "Tmsv 6-DIF (ms)                1\n",
+       "AVP(I,D)                       1\n",
+       "Tmsv 6-DIF (%)                 1\n",
+       "LA Length_phl                  1\n",
+       "Area VD ts                     1\n",
+       "Vmáx E VT                      1\n",
+       "Tmsv 16-DIF (%)                1\n",
+       "Excursión VI: DesvEst          1\n",
+       "Tmsv 16-DIF (ms)               1\n",
        "Name: name, Length: 362, dtype: int64"
       ]
      },
@@ -3530,23 +3430,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>58207</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117616</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125620</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161797</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>170419</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3555,11 +3455,11 @@
       "text/plain": [
        "                    view\n",
        "instanceidk             \n",
-       "58207        {a4c, plax}\n",
-       "117616       {a4c, plax}\n",
-       "125620       {a4c, plax}\n",
-       "161797       {a4c, plax}\n",
-       "170419       {a4c, plax}"
+       "58207        {plax, a4c}\n",
+       "117616       {plax, a4c}\n",
+       "125620       {plax, a4c}\n",
+       "161797       {plax, a4c}\n",
+       "170419       {plax, a4c}"
       ]
      },
      "execution_count": 89,
@@ -3581,7 +3481,7 @@
      "data": {
       "text/plain": [
        "{a2c, a4c}     113\n",
-       "{a4c, plax}     49\n",
+       "{plax, a4c}     49\n",
        "Name: view, dtype: int64"
       ]
      },
