--- a/notebooks/20190627_WT_testing_dicom_metadata_retrieval_on_ec2.ipynb
+++ b/notebooks/20190627_WT_testing_dicom_metadata_retrieval_on_ec2.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Experimental notebook for testing data retrieval from S3\n",
+    "*author: Wiebke Toussaint*\n",
+    "\n",
+    "The functions tested in this notebook have been integrated into `usal_echo.d00_utils.xxx` and `usal_echo.d01_data.dicom_processing`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Useful links  \n",
     "[boto3](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/s3.html#bucket)  \n",
     "[s3fs](https://s3fs.readthedocs.io/en/latest/api.html#s3fs.core.S3FileSystem.metadata)  \n",
@@ -17,6 +27,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "import time\n",
     "import pandas as pd\n",
     "\n",
