--- a/notebooks/20190701_WT_dicom_metadata_processing.ipynb
+++ b/notebooks/20190701_WT_dicom_metadata_processing.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Processing Raw Dicom Metadata\n",
+    "*author: Wiebke Toussaint*  \n",
+    "\n",
     "This notebook performs the steps that are required to add the relevant dicom tags from the raw metadata csv to a postgres database."
    ]
   },
@@ -18,7 +20,8 @@
     "import sys\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "from json import load"
+    "from json import load\n",
+    "import psycopg2"
    ]
   },
   {
@@ -40,6 +43,87 @@
     "metadata_path = os.path.join(datadir, '02_intermediate','dicom_metadata.csv')\n",
     "\n",
     "from usal_echo.d01_data import dicom_metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Functions to add metadata table to database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _load_db_credentials(filepath):\n",
+    "    with open(filepath) as f:\n",
+    "        credentials = load(f)\n",
+    "\n",
+    "    return credentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_to_db(df, db_table, credentials_file):\n",
+    "    credentials = _load_db_credentials(credentials_file)\n",
+    "    connection_str =  \"postgresql://{}:{}@{}/{}\".format(credentials['user'],\n",
+    "                                                         credentials['psswd'],\n",
+    "                                                         credentials['host'],\n",
+    "                                                         credentials['database'])\n",
+    "    conn = create_engine(connection_str)\n",
+    "    df.to_sql(db_table, conn, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dbtable_to_df(db_table, credentials_file):\n",
+    "    credentials = _load_db_credentials(credentials_file)\n",
+    "    connection_str =  \"postgresql://{}:{}@{}/{}\".format(credentials['user'],\n",
+    "                                                         credentials['psswd'],\n",
+    "                                                         credentials['host'],\n",
+    "                                                         credentials['database'])\n",
+    "    conn = create_engine(connection_str)\n",
+    "    df = pd.read_sql_query('select * from \"'+ db_table +'\"', con=conn, chunksize=100000)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_meta_lite(dicom_tags, save_to_db=False, credentials_file=None, db_table=None):\n",
+    "    \n",
+    "    # Read metadata in chunks to avoid kernel crashing due to large data volume.\n",
+    "    \n",
+    "    datalist = []\n",
+    "for chunk in pd.read_csv(metadata_path, chunksize=1000000, dtype={'dirname':'category','filename':'category',\n",
+    "                                                                      'tag1':'category','tag2':'category'}):\n",
+    "        chunk['tags'] = list(zip(chunk['tag1'],chunk['tag2']))\n",
+    "        filtered_chunk = chunk[chunk['tags'].isin(dicom_tags.values())]\n",
+    "        if save_to_db is True:\n",
+    "            try:\n",
+    "                save_to_db(filtered_chunk, db_table, credentials_file)\n",
+    "            except:\n",
+    "                raise\n",
+    "            print('saved chunks to db')\n",
+    "        datalist.append(filtered_chunk)\n",
+    "    \n",
+    "    meta = pd.concat(datalist)\n",
+    "    \n",
+    "    return meta"
    ]
   },
   {
@@ -149,10 +233,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credentials_file = os.path.join(os.path.expanduser('~'),'.psql_credentials.json')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read metadata in chunks to avoid kernel crashing due to large data volume."
+    "Getting the metadata lite takes several minutes."
    ]
   },
   {
@@ -161,11 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datalist = []\n",
-    "for chunk in pd.read_csv(metadata_path, chunksize=1000000):\n",
-    "    chunk['tags'] = list(zip(chunk['tag1'],chunk['tag2']))\n",
-    "    filtered_chunk = chunk[chunk['tags'].isin(dicom_tags.values())]\n",
-    "    datalist.append(filtered_chunk)"
+    "meta = get_meta_lite(dicom_tags)"
    ]
   },
   {
@@ -174,17 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = pd.concat(datalist)\n",
-    "for col in meta.columns[:-2]:\n",
-    "    meta[col] = meta[col].astype('category')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(len(meta))\n",
     "meta.head()"
    ]
   },
@@ -232,63 +311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ultrasound_color_data_present\n",
-    "meta.loc[meta['tags']==('0028','0014'),'value'].value_counts()"
+    "#region_spatial_format\n",
+    "meta.loc[meta['tags']==('0018','6012'),'value'].value_counts()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Add metadata table to database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _load_db_credentials(filepath):\n",
-    "    with open(filepath) as f:\n",
-    "        credentials = load(f)\n",
-    "\n",
-    "    return credentials"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_to_db(df, credentials_file):\n",
-    "    credentials = _load_db_credentials(credentials_file)\n",
-    "    connection_str =  \"postgresql://{}:{}@{}/{}\".format(credentials['user'],\n",
-    "                                                         credentials['password'],\n",
-    "                                                         credentials['host'],\n",
-    "                                                         credentials['database'])\n",
-    "    conn = create_engine(connection_str)\n",
-    "    df.to_sql('metadata', conn, if_exists='append', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "credentials_file = os.path.join(os.path.expanduser('~'),'.psql_credentials.json')\n",
-    "if os.path.exists(credentials_file) is True:\n",
-    "    save_to_db(meta, credentials_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
