added metadata path arguement

--- a/notebooks/20190701_WT_dicom_metadata_processing.ipynb
+++ b/notebooks/20190701_WT_dicom_metadata_processing.ipynb
@@ -72,34 +72,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_meta_lite(dicom_tags, save_to_db=False, credentials_file=None, db_table=None):\n",
-    "    \n",
-    "    # Read metadata in chunks to avoid kernel crashing due to large data volume.\n",
-    "    \n",
-    "    datalist = []\n",
-    "    for chunk in pd.read_csv(metadata_path, chunksize=1000000, dtype={'dirname':'category','filename':'category',\n",
-    "                                                                      'tag1':'category','tag2':'category'}):\n",
-    "        chunk['tags'] = list(zip(chunk['tag1'],chunk['tag2']))\n",
-    "        filtered_chunk = chunk[chunk['tags'].isin(dicom_tags.values())]\n",
-    "        if save_to_db is True:\n",
-    "            try:\n",
-    "                save_to_db(filtered_chunk, db_table, credentials_file)\n",
-    "            except:\n",
-    "                raise\n",
-    "            print('saved chunks to db')\n",
-    "        datalist.append(filtered_chunk)\n",
-    "    \n",
-    "    meta = pd.concat(datalist)\n",
-    "    \n",
-    "    return meta"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = dicom_metadata.get_meta_lite(dicom_tags)"
+    "meta = dicom_metadata.get_meta_lite(dicom_tags, metadata_path)"
    ]
   },
   {
