Adding summary table cleaning script

--- a/notebooks/03072019_CI_Summary_Table_Cleaning_Functions.ipynb
+++ b/notebooks/03072019_CI_Summary_Table_Cleaning_Functions.ipynb
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "mydssgenv",
    "language": "python",
    "name": "dssg"
   },
