--- a/notebooks/20190702_YN_measurement_eda.ipynb
+++ b/notebooks/20190702_YN_measurement_eda.ipynb
@@ -32,6 +32,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from d01_data.access_database import *\n",
+    "from d03_processing.modify_columns import *"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,16 +50,6 @@
     "* `measurement_abstract_rpt`: 1,568,350 final (reported) study measurements (more than measured because some are automatically calculated)\n",
     "* `a_measgraphref`: 823,886 total (recorded) instance measurements (some with bad `instanceidk`, `indexinmglist` values)\n",
     "* `a_measgraphic`: 486,884 instance frames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from d01_data.access_database import *\n",
-    "from d03_processing.modify_columns import *"
    ]
   },
   {
@@ -594,8 +594,8 @@
        "ASC (Haycock)              21438\n",
        "Vmáx V2 Ao                 20828\n",
        "GP máx Ao                  20827\n",
-       "VTD(Teich)                 20623\n",
        "DVItd                      20623\n",
+       "VTD(Teich)                 20623\n",
        "VTD(cúbico)                20613\n",
        "SIVtd                      20548\n",
        "PPVItd                     20430\n",
@@ -614,40 +614,40 @@
        "DVIts ap4                  17210\n",
        "VTD(el-ps4)                16665\n",
        "AVItd ap4                  16664\n",
-       "VTS(el-ps4)                16354\n",
        "AVIts ap4                  16354\n",
-       "FE(el-ps4)                 16338\n",
+       "VTS(el-ps4)                16354\n",
+       "VS(el-ps4)                 16338\n",
        "                           ...  \n",
-       "RA ESA_phl                     1\n",
-       "Diámetro de CIA                1\n",
-       "Excursión VI: media            1\n",
-       "IVC Diam_phl                   1\n",
-       "E/A VT                         1\n",
-       "Tmsv 12-SD (ms)                1\n",
-       "Excursión VI: mín              1\n",
-       "AVP(I,A)                       1\n",
-       "Tmsv 16-SD (ms)                1\n",
-       "Vmáx E VT                      1\n",
-       "Tmsv 16-DIF (ms)               1\n",
-       "Tmsv 6-SD (%)                  1\n",
-       "Diám. TSVD proximal            1\n",
-       "Tmsv 6-DIF (ms)                1\n",
-       "Tmsv 6-DIF (%)                 1\n",
-       "Area VD ts                     1\n",
-       "Excursión VI: DesvEst          1\n",
-       "GC(VM 1 diám)                  1\n",
-       "RVIDd/LVIDd_phl                1\n",
        "Tmsv 12-DIF (ms)               1\n",
-       "Tmsv 12-SD (%)                 1\n",
-       "Excursión VI: máx.             1\n",
-       "Tmsv 16-SD (%)                 1\n",
+       "Excursión VI: media            1\n",
+       "Tmsv 16-DIF (%)                1\n",
+       "Excursión VI: mín              1\n",
+       "Vmáx E VT                      1\n",
+       "IVC Diam_phl                   1\n",
+       "Area VD ts                     1\n",
+       "Tmpo. R-R                      1\n",
        "LA Length_phl                  1\n",
-       "AVP(I,D)                       1\n",
        "Tmsv 6-SD (ms)                 1\n",
-       "Vmáx A VT                      1\n",
-       "FAC VD                         1\n",
-       "Area VD td                     1\n",
+       "Tmsv 12-SD (ms)                1\n",
+       "Tmsv 12-SD (%)                 1\n",
+       "RVIDd/LVIDd_phl                1\n",
        "GP med AP (completo)           1\n",
+       "Area VD td                     1\n",
+       "Tmsv 12-DIF (%)                1\n",
+       "RA ESA_phl                     1\n",
+       "Tmsv 16-DIF (ms)               1\n",
+       "Tmsv 6-DIF (ms)                1\n",
+       "AVP(I,A)                       1\n",
+       "Tmsv 6-SD (%)                  1\n",
+       "E/A VT                         1\n",
+       "Tmsv 6-DIF (%)                 1\n",
+       "Tmsv 16-SD (%)                 1\n",
+       "Diám. TSVD proximal            1\n",
+       "Excursión VI: máx.             1\n",
+       "Tmsv 16-SD (ms)                1\n",
+       "FAC VD                         1\n",
+       "AVP(I,D)                       1\n",
+       "IC(VM 1 diám)                  1\n",
        "Name: name, Length: 362, dtype: int64"
       ]
      },
@@ -3047,23 +3047,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>58207</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117616</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125620</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>161797</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>170419</th>\n",
-       "      <td>{a4c, plax}</td>\n",
+       "      <td>{plax, a4c}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3072,11 +3072,11 @@
       "text/plain": [
        "                    view\n",
        "instanceidk             \n",
-       "58207        {a4c, plax}\n",
-       "117616       {a4c, plax}\n",
-       "125620       {a4c, plax}\n",
-       "161797       {a4c, plax}\n",
-       "170419       {a4c, plax}"
+       "58207        {plax, a4c}\n",
+       "117616       {plax, a4c}\n",
+       "125620       {plax, a4c}\n",
+       "161797       {plax, a4c}\n",
+       "170419       {plax, a4c}"
       ]
      },
      "execution_count": 76,
@@ -3098,7 +3098,7 @@
      "data": {
       "text/plain": [
        "{a4c, a2c}     113\n",
-       "{a4c, plax}     49\n",
+       "{plax, a4c}     49\n",
        "Name: view, dtype: int64"
       ]
      },
