--- a/notebooks/20190708_DVV_filter_views_testbed.ipynb
+++ b/notebooks/20190708_DVV_filter_views_testbed.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'd03_processing.clean_measurements'",
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-aa189c34f99d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md00_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0md03_processing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_measurements\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'd03_processing.clean_measurements'"
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-39abd682c563>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdb_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../src/d01_data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mingestion_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mingest_xtdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../src/d02_intermediate'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mclean_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dicom_image_classification/src/d01_data/ingestion_xtdb.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0md00_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms3_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_matching_s3_keys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0md00_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdbReadWriteRaw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
      ]
     }
    ],
@@ -22,28 +23,206 @@
     "import os\n",
     "import sys\n",
     "import json\n",
-    "sys.path.append('../src')\n",
+    "import psycopg2\n",
     "\n",
-    "from d00_utils.db_utils import *\n",
-    "from d03_processing.clean_measurements import *\n",
-    "\n",
-    "\n",
-    "def get_connection():\n",
-    "    ''' \n",
-    "    Establish connection to psql database\n",
-    "    Requirement: .psql_credentials.json in root directory\n",
-    "    '''\n",
-    "    filename = os.path.expanduser('~') + '/.psql_credentials.json'\n",
-    "    with open(filename) as f:\n",
-    "        conf = json.load(f)\n",
-    "        \n",
-    "        connection_string = \"postgresql://{}:{}@{}/{}\".format(\n",
-    "        conf[\"user\"], conf[\"psswd\"], conf[\"host\"], conf[\"database\"])\n",
-    "    \n",
-    "        conn = sqlalchemy.create_engine(connection_string, pool_pre_ping=True)\n",
-    "        \n",
-    "        return conn"
+    "sys.path.append('../src/d00_utils')\n",
+    "from db_utils import *\n",
+    "sys.path.append('../src/d01_data')\n",
+    "from ingestion_xtdb import ingest_xtdb\n",
+    "sys.path.append('../src/d02_intermediate')\n",
+    "from clean_xtdb import *"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_raw = dbReadWriteRaw()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define measurement names\n",
+    "MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW = ['Diám raíz Ao', \\\n",
+    "    'Diám. Ao asc.', 'Diám TSVI', 'Dimensión AI']\n",
+    "# POTENTIAL_MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW = ['Diám TSVD', \\\n",
+    "#      'DVItd', 'DVIts', 'SIVtd', 'PPVItd']\n",
+    "# Note: Removed 'Diam TSVD' as a measurement which would classify\n",
+    "# a view as PLAX as Antonio is unsure of this, 2019_09_07\n",
+    "# This change disqualifies 650 frames from being considered PLAX\n",
+    "POTENTIAL_MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW = [ \\\n",
+    "     'DVItd', 'DVIts', 'SIVtd', 'PPVItd']\n",
+    "MEASUREMENTS_APICAL_4_CHAMBER_VIEW = ['AVItd ap4', 'VTD(el-ps4)', \\\n",
+    "     'VTD(MDD-ps4)', 'VTD 4C', 'AVIts ap4', 'VTS(el-ps4)', \\\n",
+    "     'VTS(MDD-ps4)', 'VTS 4C', 'Vol. AI (MOD-sp4)']\n",
+    "MEASUREMENTS_APICAL_2_CHAMBER_VIEW = ['AVItd ap2', 'VTD(el-ps2)', \\\n",
+    "    'VTD(MDD-ps2)', 'VTD 2C', 'AVIts ap2', 'VTS(el-ps2)', \\\n",
+    "    'VTS(MDD-ps2)', 'VTS 2C', 'Vol. AI (MOD-sp2)']\n",
+    "ALL_MEASUREMENTS = MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW + \\\n",
+    "    POTENTIAL_MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW + \\\n",
+    "    MEASUREMENTS_APICAL_4_CHAMBER_VIEW + MEASUREMENTS_APICAL_2_CHAMBER_VIEW\n",
+    "MEASUREMENTS_END_DIASTOLIC = ['DVItd', 'SIVtd', 'PPVItd', \\\n",
+    "'AVItd ap4', 'VTD(el-ps4)', 'VTD(MDD-ps4)', 'VTD 4C', 'AVItd ap2', \\\n",
+    "'VTD(el-ps2)', 'VTD(MDD-ps2)', 'VTD 2C']\n",
+    "MEASUREMENTS_END_SYSTOLIC = ['DVIts', 'AVIts ap4', 'VTS(el-ps4)', \\\n",
+    "    'VTS(MDD-ps4)', 'VTS 4C', 'AVIts ap2', 'VTS(el-ps2)', \\\n",
+    "    'VTS(MDD-ps2)', 'VTS 2C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 10)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "io_clean = dbReadWriteClean()\n",
+    "io_views = dbReadWriteViews()\n",
+    "\n",
+    "measurement_abstract_rpt_df = io_clean.get_table('measurement_abstract_rpt')\n",
+    "measgraphref_df = io_clean.get_table('a_measgraphref')\n",
+    "measgraphic_df = io_clean.get_table('a_measgraphic')\n",
+    "\n",
+    "\n",
+    "\n",
+    "#measurement_abstract_rpt_df.shape\n",
+    "measgraphref_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter out unnecessary columns in each table\n",
+    "measgraphref_df = measgraphref_df[['studyidk', \\\n",
+    "    'measabstractnumber', 'instanceidk', 'indexinmglist']]\n",
+    "measgraphic_df = measgraphic_df[['instanceidk', \\\n",
+    "    'indexinmglist', 'frame']]\n",
+    "measurement_abstract_rpt_df = measurement_abstract_rpt_df[[\\\n",
+    "    'studyid', 'measabstractnumber', 'name']]\n",
+    "measurement_abstract_rpt_df = measurement_abstract_rpt_df.rename(\\\n",
+    "    index=str, columns={\"studyid\": \"studyidk\"})\n",
+    "\n",
+    "# Merge individual dataframes into one\n",
+    "merge_df = measgraphref_df.merge(measgraphic_df, on=[\\\n",
+    "    'instanceidk', 'indexinmglist'])\n",
+    "merge_df = merge_df.merge(measurement_abstract_rpt_df, on=[\\\n",
+    "    'studyidk', 'measabstractnumber'])\n",
+    "\n",
+    "merge_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df containing all frames for which we have measurements\n",
+    "filter_df = merge_df#[merge_df.name.isin(ALL_MEASUREMENTS)].copy()\n",
+    "\n",
+    "filter_df['is_end_diastolic'] = filter_df['name'].isin(MEASUREMENTS_END_DIASTOLIC)\n",
+    "filter_df['is_end_systolic'] = filter_df['name'].isin(MEASUREMENTS_END_SYSTOLIC)\n",
+    "\n",
+    "filter_df['is_plax'] = filter_df['name'].isin(MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW)\n",
+    "filter_df['maybe_plax'] = filter_df['name'].isin(POTENTIAL_MEASUREMENTS_PARASTERNAL_LONG_AXIS_VIEW)\n",
+    "filter_df['is_a4c'] = filter_df['name'].isin(MEASUREMENTS_APICAL_4_CHAMBER_VIEW)\n",
+    "filter_df['is_a2c'] = filter_df['name'].isin(MEASUREMENTS_APICAL_2_CHAMBER_VIEW)\n",
+    "\n",
+    "filter_df['view'] = ''\n",
+    "filter_df.loc[filter_df['is_plax']==True, 'view'] = 'plax'\n",
+    "filter_df.loc[filter_df['maybe_plax']==True, 'view'] = 'plax'\n",
+    "filter_df.loc[filter_df['is_a4c']==True, 'view'] = 'a4c'\n",
+    "filter_df.loc[filter_df['is_a2c']==True, 'view'] = 'a2c'\n",
+    "\n",
+    "filter_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_df = filter_df.groupby(['instanceidk', 'indexinmglist']).first()\n",
+    "group_df = group_df.drop(['measabstractnumber', 'name'], axis='columns')\n",
+    "\n",
+    "group_df = group_df.reset_index()\n",
+    "(group_df.reset_index().groupby(['instanceidk', 'indexinmglist'])['view'].nunique().eq(1)==False).sum()\n",
+    "(group_df.reset_index().groupby('instanceidk')['view'].nunique().eq(1)==False).sum()\n",
+    "\n",
+    "frames_with_views_df = group_df#.merge(is_instance_multiview, on='instanceidk')\n",
+    "frames_with_views_df = frames_with_views_df.drop(['is_plax', 'maybe_plax', 'is_a4c', 'is_a2c'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 7)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frames_with_views_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "486877"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
